force-app/main/default/objects/Import_Log__c/Import_Log__c.object-meta.xml
<CustomObject>
    <description>This object has a master detail with Import_Message__c and displays all log files that were generated when processing the import message.</description>
    <label>Import Log</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Import Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>