force-app/main/default/objects/Import_Log__c/fields/Import_Finished_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Import_Finished_DateTime__c</fullName>
    <description>The date time that the processing of the import message finished.</description>
    <label>Import Finished DateTime</label>
    <type>DateTime</type>
</CustomField>