force-app/main/default/objects/Import_Log__c/fields/Import_Is_Successful__c.field-meta.xml
<CustomField>
    <fullName>Import_Is_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field displays true if the processing of the import message was successful. If any error occured, this field shows false.</description>
    <label>Import Is Successful</label>
    <type>Checkbox</type>
</CustomField>