force-app/main/default/objects/Import_Log__c/fields/Import_Log__c.field-meta.xml
<CustomField>
    <fullName>Import_Log__c</fullName>
    <description>This field displays the log messages generated during the processing of the import message.</description>
    <label>Import Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>