force-app/main/default/objects/Import_Log__c/fields/Import_Message__c.field-meta.xml
<CustomField>
    <fullName>Import_Message__c</fullName>
    <description>This field links to Import_Message__c where this Import_Log__c is for.</description>
    <label>Import</label>
    <referenceTo>Import_Message__c</referenceTo>
    <relationshipLabel>Import Logs</relationshipLabel>
    <relationshipName>Import_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>