force-app/main/default/objects/Import_Log__c/fields/Import_Started_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Import_Started_DateTime__c</fullName>
    <description>The date time that the processing of the import message started.</description>
    <label>Import Started DateTime</label>
    <type>DateTime</type>
</CustomField>