force-app/main/default/objects/Import_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Import_Is_Successful__c</columns>
    <columns>Import_Started_DateTime__c</columns>
    <columns>Import_Finished_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>